--- a/scss/responsives/_desktop.scss
+++ b/scss/responsives/_desktop.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 1280px) {
     .navbar {
         &-nav {
-            gap: 2rem !important;
+            gap: 1rem !important;
         }
     }
 }
