--- a/scss/responsives/_laptop.scss
+++ b/scss/responsives/_laptop.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 993px) {
     .navbar {
         &-nav {
-            gap: 1rem !important;
+            gap: 0.75rem !important;
         }
     }
 }
