--- a/scss/responsives/_tablet.scss
+++ b/scss/responsives/_tablet.scss
@@ -6,7 +6,7 @@
 
         &-right {
             flex-direction: column;
-            gap: 1rem;
+            gap: 1rem !important;
         }
 
         &-collapse {
